[gd_scene load_steps=36 format=3 uid="uid://bch7jaxt5to04"]

[ext_resource type="Script" path="res://main.gd" id="1_2li3r"]
[ext_resource type="Texture2D" uid="uid://6ga5dibsws2h" path="res://background/backgrounds/set1_background.png" id="1_7q5h0"]
[ext_resource type="Script" path="res://main_state.gd" id="1_wc4pt"]
[ext_resource type="Texture2D" uid="uid://dp48y8rhkbtli" path="res://bird/fall.png" id="1_yc6s5"]
[ext_resource type="Texture2D" uid="uid://dr4cejoe10g5n" path="res://background/foregrounds/set2_hills.png" id="2_pj211"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="2_wcqb5"]
[ext_resource type="Texture2D" uid="uid://0bgus5pyur11" path="res://bird/dead.png" id="2_wg0kq"]
[ext_resource type="Script" path="res://bird/bird.gd" id="3_7bjua"]
[ext_resource type="Script" path="res://edge_wall.gd" id="3_jcxnq"]
[ext_resource type="Script" path="res://utils/visible_state.gd" id="3_l61ae"]
[ext_resource type="Script" path="res://pipes/pipe_manager.gd" id="3_thwxt"]
[ext_resource type="Texture2D" uid="uid://dg3dbtyyd3wyx" path="res://pipes/tile_blue_top.png" id="4_1ka1o"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="4_vk71r"]
[ext_resource type="Texture2D" uid="uid://csnwxwtgx5fdn" path="res://pipes/tile_blue_middle.png" id="5_kv0ol"]
[ext_resource type="Script" path="res://camera.gd" id="6_qecor"]
[ext_resource type="Script" path="res://background/background_changer.gd" id="6_v8ctp"]
[ext_resource type="Resource" uid="uid://dsgef5fg5q5ej" path="res://background/backgrounds/backgrounds.tres" id="7_4it5b"]
[ext_resource type="Resource" uid="uid://bvuhnonga5k2c" path="res://background/foregrounds/foregrounds.tres" id="8_pqtrw"]
[ext_resource type="Texture2D" uid="uid://blgc2seuha5to" path="res://pipes/tile_brown_top.png" id="15_1nc4n"]
[ext_resource type="Script" path="res://ui/game.gd" id="15_1vuyk"]
[ext_resource type="Texture2D" uid="uid://dc7tqakdyfu7i" path="res://pipes/tile_brown_middle.png" id="16_rox5t"]
[ext_resource type="Script" path="res://ui/game_over.gd" id="17_fgy6l"]
[ext_resource type="Texture2D" uid="uid://catrybd4ogibb" path="res://pipes/tile_green_top.png" id="17_wgm7g"]
[ext_resource type="Texture2D" uid="uid://cgqo41wa0vuin" path="res://pipes/tile_green_middle.png" id="18_ntc2s"]
[ext_resource type="Script" path="res://ui/idle.gd" id="19_b0pro"]
[ext_resource type="Texture2D" uid="uid://dxigrr31l61xj" path="res://pipes/tile_yellow_top.png" id="19_xlohi"]
[ext_resource type="Texture2D" uid="uid://d1oqgc2p5ildk" path="res://pipes/tile_yellow_middle.png" id="20_q3mon"]
[ext_resource type="Texture2D" uid="uid://ciw785x36aiqw" path="res://ui/twitter_logo.png" id="22_gs7hx"]
[ext_resource type="Script" path="res://utils/tweet_button.gd" id="22_t3afh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ce2ut"]
radius = 18.0

[sub_resource type="LabelSettings" id="LabelSettings_f2387"]
font_size = 40
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0cfms"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xhjl0"]
font_size = 35
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fl3kh"]
font_size = 40
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qcil3"]
font_size = 35
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node"]
script = ExtResource("1_2li3r")

[node name="MainState" type="Node" parent="."]
script = ExtResource("1_wc4pt")
track_in_editor = true

[node name="Root" type="Node" parent="MainState"]
script = ExtResource("2_wcqb5")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="MainState/Root" node_paths=PackedStringArray("target_node")]
script = ExtResource("3_l61ae")
target_node = NodePath("../../../Camera/UIs/Idle")

[node name="GameStart" type="Node" parent="MainState/Root/Idle"]
script = ExtResource("4_vk71r")
to = NodePath("../../Game")
event = &"game_start"
delay_in_seconds = "0.0"

[node name="Game" type="Node" parent="MainState/Root" node_paths=PackedStringArray("target_node")]
script = ExtResource("3_l61ae")
target_node = NodePath("../../../Camera/UIs/Game")

[node name="GameOver" type="Node" parent="MainState/Root/Game"]
script = ExtResource("4_vk71r")
to = NodePath("../../GameOver")
event = &"game_over"
delay_in_seconds = "0.0"

[node name="GameOver" type="Node" parent="MainState/Root" node_paths=PackedStringArray("target_node")]
script = ExtResource("3_l61ae")
target_node = NodePath("../../../Camera/UIs/GameOver")

[node name="Restart" type="Node" parent="MainState/Root/GameOver"]
script = ExtResource("4_vk71r")
to = NodePath("../../Idle")
event = &"game_restart"
delay_in_seconds = "0.0"

[node name="ParallaxBackground" type="ParallaxBackground" parent="." node_paths=PackedStringArray("_sprite_background", "_sprite_foreground")]
scroll_base_scale = Vector2(0.5, 0.5)
script = ExtResource("6_v8ctp")
_group_background = ExtResource("7_4it5b")
_group_foreground = ExtResource("8_pqtrw")
_sprite_background = NodePath("Background/Sprite")
_sprite_foreground = NodePath("Foreground/Sprite")

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(640, 2.08165e-12)

[node name="Sprite" type="Sprite2D" parent="ParallaxBackground/Background"]
texture = ExtResource("1_7q5h0")
centered = false

[node name="Foreground" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(640, 2.08165e-12)

[node name="Sprite" type="Sprite2D" parent="ParallaxBackground/Foreground"]
texture = ExtResource("2_pj211")
centered = false

[node name="EdgeWall" type="StaticBody2D" parent="."]
script = ExtResource("3_jcxnq")

[node name="Pipes" type="Node2D" parent="."]
script = ExtResource("3_thwxt")
_texture_pairs = {
ExtResource("4_1ka1o"): ExtResource("5_kv0ol"),
ExtResource("15_1nc4n"): ExtResource("16_rox5t"),
ExtResource("17_wgm7g"): ExtResource("18_ntc2s"),
ExtResource("19_xlohi"): ExtResource("20_q3mon")
}

[node name="Bird" type="RigidBody2D" parent="." node_paths=PackedStringArray("_pipe_manager", "_visible_on_screen_notifier", "_sprite_normal", "_sprite_dead")]
can_sleep = false
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("3_7bjua")
_pipe_manager = NodePath("../Pipes")
_visible_on_screen_notifier = NodePath("VisibleOnScreenNotifier")
_sprite_normal = NodePath("SpriteNormal")
_sprite_dead = NodePath("SpriteDead")
metadata/_edit_group_ = true

[node name="CollisionShape" type="CollisionShape2D" parent="Bird"]
shape = SubResource("CircleShape2D_ce2ut")

[node name="VisibleOnScreenNotifier" type="VisibleOnScreenNotifier2D" parent="Bird"]
scale = Vector2(2.7, 2.7)

[node name="SpriteNormal" type="Sprite2D" parent="Bird"]
rotation = -1.5708
texture = ExtResource("1_yc6s5")
offset = Vector2(0.5, -4.5)

[node name="SpriteDead" type="Sprite2D" parent="Bird"]
visible = false
rotation = -1.5708
texture = ExtResource("2_wg0kq")
offset = Vector2(-0.5, -0.5)
flip_v = true

[node name="Camera" type="Camera2D" parent="." node_paths=PackedStringArray("_bird")]
offset = Vector2(50, 2.08165e-12)
editor_draw_limits = true
script = ExtResource("6_qecor")
_bird = NodePath("../Bird")

[node name="UIs" type="CanvasLayer" parent="Camera"]

[node name="Idle" type="Control" parent="Camera/UIs" node_paths=PackedStringArray("_instruction")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("19_b0pro")
_instruction = NodePath("Instruction")

[node name="Title" type="Label" parent="Camera/UIs/Idle"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 104.0
offset_bottom = 197.0
grow_horizontal = 2
text = "GRAVITY
BIRD"
label_settings = SubResource("LabelSettings_f2387")
horizontal_alignment = 1

[node name="Instruction" type="Label" parent="Camera/UIs/Idle"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -79.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
text = "PRESS SPACE
OR
CLICK ANYWHERE"
label_settings = SubResource("LabelSettings_0cfms")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Timer" type="Timer" parent="Camera/UIs/Idle/Instruction"]
autostart = true

[node name="Game" type="Control" parent="Camera/UIs" node_paths=PackedStringArray("_score")]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("15_1vuyk")
_score = NodePath("Score")

[node name="Score" type="Label" parent="Camera/UIs/Game"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
text = "1200"
label_settings = SubResource("LabelSettings_xhjl0")
horizontal_alignment = 1

[node name="GameOver" type="Control" parent="Camera/UIs" node_paths=PackedStringArray("_score", "_tweet")]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("17_fgy6l")
_score = NodePath("Score")
_tweet = NodePath("Tweet")

[node name="GameOver" type="Label" parent="Camera/UIs/GameOver"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -94.5
offset_bottom = -49.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_fl3kh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Camera/UIs/GameOver"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -44.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
text = "1200"
label_settings = SubResource("LabelSettings_qcil3")
horizontal_alignment = 1

[node name="Restart" type="Button" parent="Camera/UIs/GameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -130.0
offset_right = 52.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
text = "RESTART"

[node name="Tweet" type="Button" parent="Camera/UIs/GameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -131.0
offset_right = 105.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
icon = ExtResource("22_gs7hx")
script = ExtResource("22_t3afh")
tweet_text = "Gravity Birdで1200点を獲得！
https://godotplayer.com/games/gravity-bird"

[connection signal="state_entered" from="MainState/Root/Idle" to="." method="_idle_state_entered"]
[connection signal="state_entered" from="MainState/Root/Idle" to="ParallaxBackground" method="_idle_state_entered"]
[connection signal="state_entered" from="MainState/Root/Idle" to="Bird" method="_idle_state_entered"]
[connection signal="state_unhandled_input" from="MainState/Root/Idle" to="Bird" method="_game_or_idle_state_unhandled_input"]
[connection signal="state_entered" from="MainState/Root/Game" to="Pipes" method="_game_state_entered"]
[connection signal="state_processing" from="MainState/Root/Game" to="Pipes" method="_game_state_processing"]
[connection signal="state_processing" from="MainState/Root/Game" to="Bird" method="_game_state_processing"]
[connection signal="state_unhandled_input" from="MainState/Root/Game" to="Bird" method="_game_or_idle_state_unhandled_input"]
[connection signal="timeout" from="Camera/UIs/Idle/Instruction/Timer" to="Camera/UIs/Idle" method="_instruction_timer_timeout"]
[connection signal="pressed" from="Camera/UIs/GameOver/Restart" to="Camera/UIs/GameOver" method="_restart_pressed"]
